deploy: bf87304a10252a81599cc9d48285b388390b5d17

--- a/conventions/global_forceload_tag.html
+++ b/conventions/global_forceload_tag.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Style Guideline - MC Datapacks</title>
+        <title>Global Forceload Tag*** - MC Datapacks</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Minecraft Datapacks</a></li><li class="chapter-item expanded "><a href="../conventions/index.html"><strong aria-hidden="true">1.</strong> Official Conventions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../conventions/datapack_advancement.html"><strong aria-hidden="true">1.1.</strong> Datapack Advancement*</a></li><li class="chapter-item expanded "><a href="../conventions/datapack_uninstallation.html"><strong aria-hidden="true">1.2.</strong> Datapack Uninstallation*</a></li><li class="chapter-item expanded "><a href="../conventions/common_trait.html"><strong aria-hidden="true">1.3.</strong> Common Trait Convention**</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../conventions/common_trait/examples.html"><strong aria-hidden="true">1.3.1.</strong> Examples</a></li></ol></li><li class="chapter-item expanded "><a href="../conventions/custom_model_id.html"><strong aria-hidden="true">1.4.</strong> Custom Model ID***</a></li><li class="chapter-item expanded "><a href="../conventions/global_ignoring_tag.html"><strong aria-hidden="true">1.5.</strong> Global Ignoring Tag***</a></li><li class="chapter-item expanded "><a href="../conventions/global_durability.html"><strong aria-hidden="true">1.6.</strong> Global Durability*</a></li><li class="chapter-item expanded "><a href="../conventions/namespace.html"><strong aria-hidden="true">1.7.</strong> Namespace Convention***</a></li><li class="chapter-item expanded "><a href="../conventions/shulker_box_loot_table.html"><strong aria-hidden="true">1.8.</strong> Shulker Box Loot Table***</a></li><li class="chapter-item expanded "><a href="../conventions/global_forceload_tag.html"><strong aria-hidden="true">1.9.</strong> Global Forceload Tag***</a></li></ol></li><li class="chapter-item expanded "><a href="../style_guideline/index.html" class="active"><strong aria-hidden="true">2.</strong> Style Guideline</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../style_guideline/datapack_advancement.html"><strong aria-hidden="true">2.1.</strong> Datapack Advancement</a></li><li class="chapter-item expanded "><a href="../style_guideline/datapack_uninstallation.html"><strong aria-hidden="true">2.2.</strong> Datapack Uninstallation</a></li><li class="chapter-item expanded "><a href="../style_guideline/reloading_message.html"><strong aria-hidden="true">2.3.</strong> Reloading Message</a></li></ol></li><li class="chapter-item expanded "><a href="../certified_datapacks/index.html"><strong aria-hidden="true">3.</strong> Certified Datapacks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../certified_datapacks/requirement.html"><strong aria-hidden="true">3.1.</strong> Requirement</a></li></ol></li><li class="chapter-item expanded "><a href="../tips/index.html"><strong aria-hidden="true">4.</strong> Tips</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tips/enum_scoreboard.html"><strong aria-hidden="true">4.1.</strong> Enum Scoreboard</a></li><li class="chapter-item expanded "><a href="../tips/shulker_box_inventory_manipulation.html"><strong aria-hidden="true">4.2.</strong> Shulker Box Inventory Manipulation</a></li><li class="chapter-item expanded "><a href="../tips/holding_right_click_detection.html"><strong aria-hidden="true">4.3.</strong> Holding Right Click Detection</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Minecraft Datapacks</a></li><li class="chapter-item expanded "><a href="../conventions/index.html"><strong aria-hidden="true">1.</strong> Official Conventions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../conventions/datapack_advancement.html"><strong aria-hidden="true">1.1.</strong> Datapack Advancement*</a></li><li class="chapter-item expanded "><a href="../conventions/datapack_uninstallation.html"><strong aria-hidden="true">1.2.</strong> Datapack Uninstallation*</a></li><li class="chapter-item expanded "><a href="../conventions/common_trait.html"><strong aria-hidden="true">1.3.</strong> Common Trait Convention**</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../conventions/common_trait/examples.html"><strong aria-hidden="true">1.3.1.</strong> Examples</a></li></ol></li><li class="chapter-item expanded "><a href="../conventions/custom_model_id.html"><strong aria-hidden="true">1.4.</strong> Custom Model ID***</a></li><li class="chapter-item expanded "><a href="../conventions/global_ignoring_tag.html"><strong aria-hidden="true">1.5.</strong> Global Ignoring Tag***</a></li><li class="chapter-item expanded "><a href="../conventions/global_durability.html"><strong aria-hidden="true">1.6.</strong> Global Durability*</a></li><li class="chapter-item expanded "><a href="../conventions/namespace.html"><strong aria-hidden="true">1.7.</strong> Namespace Convention***</a></li><li class="chapter-item expanded "><a href="../conventions/shulker_box_loot_table.html"><strong aria-hidden="true">1.8.</strong> Shulker Box Loot Table***</a></li><li class="chapter-item expanded "><a href="../conventions/global_forceload_tag.html" class="active"><strong aria-hidden="true">1.9.</strong> Global Forceload Tag***</a></li></ol></li><li class="chapter-item expanded "><a href="../style_guideline/index.html"><strong aria-hidden="true">2.</strong> Style Guideline</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../style_guideline/datapack_advancement.html"><strong aria-hidden="true">2.1.</strong> Datapack Advancement</a></li><li class="chapter-item expanded "><a href="../style_guideline/datapack_uninstallation.html"><strong aria-hidden="true">2.2.</strong> Datapack Uninstallation</a></li><li class="chapter-item expanded "><a href="../style_guideline/reloading_message.html"><strong aria-hidden="true">2.3.</strong> Reloading Message</a></li></ol></li><li class="chapter-item expanded "><a href="../certified_datapacks/index.html"><strong aria-hidden="true">3.</strong> Certified Datapacks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../certified_datapacks/requirement.html"><strong aria-hidden="true">3.1.</strong> Requirement</a></li></ol></li><li class="chapter-item expanded "><a href="../tips/index.html"><strong aria-hidden="true">4.</strong> Tips</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tips/enum_scoreboard.html"><strong aria-hidden="true">4.1.</strong> Enum Scoreboard</a></li><li class="chapter-item expanded "><a href="../tips/shulker_box_inventory_manipulation.html"><strong aria-hidden="true">4.2.</strong> Shulker Box Inventory Manipulation</a></li><li class="chapter-item expanded "><a href="../tips/holding_right_click_detection.html"><strong aria-hidden="true">4.3.</strong> Holding Right Click Detection</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -134,24 +134,55 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="style-guideline"><a class="header" href="#style-guideline">Style Guideline</a></h1>
-<p>The guideline is an extension of the certified datapacks system. It contains information about how you should design a datapack for consistency with other datapacks.</p>
-<p>Following this guideline will not necessarily improve compatibility between datapacks, but it will improve consistency in design between datapacks.</p>
-<p>The guideline is separated into multiple pages for readability, you can find them here:</p>
-<ul>
-<li><a href="./datapack_advancement.html">Datapack Advancement</a></li>
-<li><a href="./datapack_uninstallation.html">Datapack Uninstallation</a></li>
-<li><a href="./reloading_message.html">Reloading Message</a></li>
-</ul>
+                        <h1 id="global-forceload-tag-"><a class="header" href="#global-forceload-tag-">Global Forceload Tag (<code>***</code>)</a></h1>
+<h2 id="about"><a class="header" href="#about">About</a></h2>
+<p>This convention requires data packs which force-load chunks to communicate their presence and ensure that chunks are only removed from being force-loaded when they do not need to be force-loaded by any data pack.</p>
+<h2 id="implementation"><a class="header" href="#implementation">Implementation</a></h2>
+<p>When running <code>/forceload add</code>, the programmer must spawn a tagged entity or tag an existing entity with <code>global.forceload</code> in the same chunk and within the same tick that the chunk was added. This entity's entire hitbox must reside in the chunk at all times.</p>
+<hr />
+<pre><code class="language-mcfunction">forceload add ~ ~
+summon marker ~ ~ ~ {Tags:[&quot;dp.example&quot;,&quot;global.forceload&quot;]}
+</code></pre>
+<p>In the above example, a marker (which the datapack can find later with the <code>dp.example</code> tag) is summoned when we begin force-loading the chunk. </p>
+<p>And when running <code>/forceload remove</code>, the programmer must first un-tag or kill their tagged entity and check <em>at least</em> all blocks in a vanilla-sized chunk (y=-64 to 320) for any other entities tagged <code>global.forceload</code>. If an entity is found, the chunk should <em>remain</em> force-loaded.</p>
+<hr />
+<pre><code class="language-mcfunction"># executed as our &quot;marker&quot; anywhere in the chunk
+# &quot;math&quot; is a dummy objective
+
+tag @s remove global.ignore
+
+# Constant chunk width
+scoreboard players set #16 math 16
+
+# Align marker to X chunk border
+execute store result score #pos math run data get entity @s Pos[0]
+scoreboard players operation #pos math /= #16 math
+execute store result entity @s Pos[0] double 16 run scoreboard players get #pos math
+
+# Align marker to Z chunk border
+execute store result score #pos math run data get entity @s Pos[2]
+scoreboard players operation #pos math /= #16 math
+execute store result entity @s Pos[2] double 16 run scoreboard players get #pos math
+
+# Align marker to lowest Y block
+data modify entity @s Pos[1] set value -64.0d
+
+# Check region
+execute at @s unless entity @e[tag=global.forceload,dx=15,dy=319,dz=15] run forceload remove ~ ~
+
+kill @s
+</code></pre>
+<p>In the above example, we used the original entity (tagged <code>dp.example</code> in the earlier example), so we had to remove the <code>global.forceload</code> tag prior to checking the region. This isn't required and a new entity could be spawned in if the previous entity is still needed. </p>
+<p>We used some scoreboard math to move the entity to the negative-most edge of the chunk, then used volume selectors to test the region. As for why the volume selectors are one less than expected, see <a href="https://bugs.mojang.com/browse/MC-123441">MC-123441</a>.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../conventions/global_forceload_tag.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../conventions/shulker_box_loot_table.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../style_guideline/datapack_advancement.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../style_guideline/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -160,10 +191,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../conventions/global_forceload_tag.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../conventions/shulker_box_loot_table.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../style_guideline/datapack_advancement.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../style_guideline/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
